--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <div class="info-tarjeta">
                         <h3>HISTORIA DE LAS UNIDADES</h3>
                         <p>¿Como fue que llegamos a esto?</p>
-                        <a class="link" href="https://" target="_blank" target="_blank">                            
+                        <a class="link" href="Historia de las unidades.html" target="_blank" target="_blank">                            
                             <p>Haz click aqui</p>
                             <i class="fa-solid fa-arrow-up-right-from-square"></i>
                         </a>
