--- a/Sobre somos.html
+++ b/Sobre somos.html
@@ -51,7 +51,7 @@
             <div class="member-info">
                 <h3>Aaron Fernandez</h3>
                 <p>Descripción</p>
-                <a class="linkmusic" href="" target="_blank">                            
+                <a class="linkmusic" href="https://youtu.be/oeBcGjlGB7I" target="_blank">                            
                     <p>Musica Favorita</p>
                 </a>
             </div>
@@ -62,7 +62,7 @@
             <div class="member-info">
                 <h3>Paul Ramos</h3>
                 <p>"Desde chiquito"</p>
-                <a class="linkmusic" href="" target="_blank">                            
+                <a class="linkmusic" href="https://youtu.be/WdwfX2T443E" target="_blank">                            
                     <p>Musica Favorita</p>
                 </a>
             </div>
@@ -73,7 +73,7 @@
             <div class="member-info">
                 <h3>Jesus Tenorio</h3>
                 <p>"Ya tu Samsung"</p>
-                <a class="linkmusic" href="" target="_blank">                            
+                <a class="linkmusic" href="https://youtu.be/A_fCv76c4uQ" target="_blank">                            
                     <p>Musica Favorita</p>
                 </a>
             </div>
@@ -95,7 +95,7 @@
             <div class="member-info">
                 <h3>Ruben Quintanilla</h3>
                 <p>"Cuchao"</p>
-                <a class="linkmusic" href="" target="_blank">                            
+                <a class="linkmusic" href="https://youtu.be/3hpGeucGTh0" target="_blank">                            
                     <p>Musica Favorita</p>
                 </a>
             </div>
@@ -106,7 +106,7 @@
             <div class="member-info">
                 <h3>Jose Ñahui</h3>
                 <p>"The Padrino"</p>
-                <a class="linkmusic" href="" target="_blank">                            
+                <a class="linkmusic" href="https://youtu.be/-YwHE8JYDNQ" target="_blank">                            
                     <p>Musica Favorita</p>
                 </a>
             </div>
