--- a/Sobre somos.html
+++ b/Sobre somos.html
@@ -41,7 +41,7 @@
                 <h3>Cesar Gavilano (CEO)</h3>
                 <p>"404 not found"</p>
                 <a class="linkmusic" href="" target="_blank">                            
-                    <p>Musica Favorita</p>
+                    <p>Mi lista de Musica</p>
                 </a>
             </div>
         </div>
@@ -52,7 +52,7 @@
                 <h3>Aaron Fernandez</h3>
                 <p>Descripción</p>
                 <a class="linkmusic" href="https://youtu.be/oeBcGjlGB7I" target="_blank">                            
-                    <p>Musica Favorita</p>
+                    <p>Mi lista de Musica</p>
                 </a>
             </div>
         </div>
@@ -63,7 +63,7 @@
                 <h3>Paul Ramos</h3>
                 <p>"Desde chiquito"</p>
                 <a class="linkmusic" href="https://youtu.be/WdwfX2T443E" target="_blank">                            
-                    <p>Musica Favorita</p>
+                    <p>Mi lista de Musica</p>
                 </a>
             </div>
         </div>
@@ -74,7 +74,7 @@
                 <h3>Jesus Tenorio</h3>
                 <p>"Ya tu Samsung"</p>
                 <a class="linkmusic" href="https://youtu.be/A_fCv76c4uQ" target="_blank">                            
-                    <p>Musica Favorita</p>
+                    <p>Mi lista de Musica</p>
                 </a>
             </div>
         </div>
@@ -85,7 +85,7 @@
                 <h3>Piero Aybar</h3>
                 <p>"DJ"</p>
                 <a class="linkmusic" href="" target="_blank">                            
-                    <p>Musica Favorita</p>
+                    <p>Mi lista de Musica</p>
                 </a>
             </div>
         </div>
@@ -96,7 +96,7 @@
                 <h3>Ruben Quintanilla</h3>
                 <p>"Cuchao"</p>
                 <a class="linkmusic" href="https://youtu.be/3hpGeucGTh0" target="_blank">                            
-                    <p>Musica Favorita</p>
+                    <p>Mi lista de Musica</p>
                 </a>
             </div>
         </div>
@@ -107,7 +107,7 @@
                 <h3>Jose Ñahui</h3>
                 <p>"The Padrino"</p>
                 <a class="linkmusic" href="https://youtu.be/-YwHE8JYDNQ" target="_blank">                            
-                    <p>Musica Favorita</p>
+                    <p>Mi lista de Musica</p>
                 </a>
             </div>
         </div>
