--- a/Sobre somos.html
+++ b/Sobre somos.html
@@ -50,7 +50,7 @@
             <img src="img/aaron.jpg" alt="Integrante 2" class="circular-image">
             <div class="member-info">
                 <h3>Aaron Fernandez</h3>
-                <p>Descripción</p>
+                <p>"Real hasta la muerte brrr"</p>
                 <a class="linkmusic" href="https://youtu.be/oeBcGjlGB7I" target="_blank">                            
                     <p>Mi lista de Musica</p>
                 </a>
