--- a/Sobre somos.html
+++ b/Sobre somos.html
@@ -40,7 +40,7 @@
             <div class="member-info">
                 <h3>Cesar Gavilano (CEO)</h3>
                 <p>"404 not found"</p>
-                <a class="linkmusic" href="" target="_blank">                            
+                <a class="linkmusic" href="https://www.youtube.com/watch?v=JMJP1OCPp7U&list=PLWUV0eY1WHk5L3C6IR47_ZmICWwgo2FSb" target="_blank">                            
                     <p>Mi lista de Musica</p>
                 </a>
             </div>
