--- a/Sobre somos.html
+++ b/Sobre somos.html
@@ -36,7 +36,7 @@
         <br>
         <div class="team-members-container">
         <div class="team-member cesar">
-            <img src="img/45-.jpg" alt="Integrante 1" class="circular-image">
+            <img src="img/45-3.jpg" alt="Integrante 1" class="circular-image">
             <div class="member-info">
                 <h3>Cesar Gavilano (CEO)</h3>
                 <p>"404 not found"</p>
@@ -84,7 +84,7 @@
             <div class="member-info">
                 <h3>Piero Aybar</h3>
                 <p>"DJ"</p>
-                <a class="linkmusic" href="" target="_blank">                            
+                <a class="linkmusic" href="https://www.youtube.com/watch?v=-6mBEoPOTa8" target="_blank">                            
                     <p>Mi lista de Musica</p>
                 </a>
             </div>
