--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                     <img class="img-tarjeta" src="img/Descarga.png" alt="">
                     <div class="info-tarjeta">
                         <h3>DESCARGA AQUI</h3>
-                        <p>Descarga nuestro conversor de unidades aqui</p>
-                        <a class="link" href="https://youtu.be/7qD6T4CbfI8" target="_blank">                            
+                        <p>Descarga nuestro conversor aqui</p>
+                        <a class="link" href="https://www.mediafire.com/file/qnfjeo8utbzlj93/GRUPO_V.rar/file" target="_blank">                            
                             <p>Haz click aqui</p>
                             <i class="fa-solid fa-arrow-up-right-from-square"></i>
                         </a>
