--- a/El tiempo en nuestras vidas.html
+++ b/El tiempo en nuestras vidas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El tiempo en nuestras vidas</title>
-    <link rel="icon" href="img/ICONO.jfif">
+    <link rel="icon" href="img/ICONO.png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
